Revert "Revert "Fix spacing and sizing for supernova and supernova-item blocks""
This reverts commit 86a54be3c382d54b44b8fb423860b1e5a5bbf9c9.

--- a/packages/block-library/src/blocks/supernova/scss/_collection.scss
+++ b/packages/block-library/src/blocks/supernova/scss/_collection.scss
@@ -58,6 +58,14 @@
   }
 }
 
+.nb-collection__header[class] {
+  padding-bottom: calc(-1 * var(--nb-block-top-spacing) * var(--nb-spacing));
+}
+
+.nb-collection__inner-container {
+  position: relative;
+}
+
 .nb-supernova-item--aspect-ratio-auto {
 
   .novablocks-media-composition__image {
